--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,29 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.1.4)
 project(crud VERSION 0.1.0)
 
-include(CTest)
+# GoogleTest requires at least C++14
+set(CMAKE_CXX_STANDARD 20)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 enable_testing()
 
 add_executable(crud main.cpp)
+
+target_link_libraries(
+  crud
+  GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(crud)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
